--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,34 @@
-server.port                                       = 8080
-spring.datasource.url                             = jdbc:mysql://localhost:3306/TaxFM?createDatabaseIfNotExist=true
-spring.datasource.username                        = root
-spring.datasource.password                        = root
-spring.datasource.driver-class-name               = com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto                     = update
-spring.datasource.hikari.leakDetectionThreshold   = 60000
-spring.datasource.initialization-mode             = always
-spring.thymeleaf.cache                            = false
+server.port                                            = 8080
+spring.datasource.url                                  = jdbc:mysql://localhost:3306/TaxFM?createDatabaseIfNotExist=true
+spring.datasource.username                             = root
+spring.datasource.password                             = root
+spring.datasource.driver-class-name                    = com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto                          = update
+spring.datasource.hikari.leakDetectionThreshold        = 60000
+spring.datasource.initialization-mode                  = always
+
+spring.thymeleaf.cache                                 = false
+
 # Optional, if you have a schema.sql file
 #spring.datasource.schema                        = classpath:/sql/schema.sql
-spring.datasource.data                            = classpath:/sql/data.sql
-spring.devtools.restart.enabled                   = true
+spring.datasource.data                                 = classpath:/sql/data.sql
+spring.devtools.restart.enabled                        = true
+
 #logging.level.org.springframework.security                = DEBUG
 #logging.level.org.springframework                         = DEBUG
 #logging.level.org.springframework.security.authentication = DEBUG
+
 # SQL logging (optional, to debug SQL script execution)
-logging.level.org.springframework.jdbc.core       = DEBUG
-logging.level.org.springframework.jdbc.datasource = DEBUG
+logging.level.org.springframework.jdbc.core            = DEBUG
+logging.level.org.springframework.jdbc.datasource      = DEBUG
+
+# Spring session configuration
+spring.session.store-type                              = jdbc
+spring.session.jdbc.initialize-schema                  = always
+
+# Session Timeout (in seconds)
+server.servlet.session.timeout                         = 1800s
+
+# Session invalidation settings
+spring.security.session-management.invalid-session-url = /login?invalidSession=true
+spring.security.session-management.expired-url         = /login?expired=true
