--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,34 +1,45 @@
-server.port                                            = 8080
-spring.datasource.url                                  = jdbc:mysql://localhost:3306/TaxFM?createDatabaseIfNotExist=true
-spring.datasource.username                             = root
-spring.datasource.password                             = root
-spring.datasource.driver-class-name                    = com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto                          = update
-spring.datasource.hikari.leakDetectionThreshold        = 60000
-spring.datasource.initialization-mode                  = always
+# Server Configuration
+server.port                                               = 8080
+server.servlet.session.timeout                            = 5s
 
-spring.thymeleaf.cache                                 = false
+# DataSource Configuration
+spring.datasource.url                                     = jdbc:mysql://localhost:3306/TaxFM?createDatabaseIfNotExist=true
+spring.datasource.username                                = root
+spring.datasource.password                                = root
+spring.datasource.driver-class-name                       = com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.leakDetectionThreshold           = 60000
+spring.datasource.initialization-mode                     = always
 
-# Optional, if you have a schema.sql file
-#spring.datasource.schema                        = classpath:/sql/schema.sql
-spring.datasource.data                                 = classpath:/sql/data.sql
-spring.devtools.restart.enabled                        = true
+# Hibernate Configuration
+spring.jpa.hibernate.ddl-auto                             = update
 
-#logging.level.org.springframework.security                = DEBUG
-#logging.level.org.springframework                         = DEBUG
-#logging.level.org.springframework.security.authentication = DEBUG
+# Thymeleaf Configuration
+spring.thymeleaf.cache                                    = false
 
-# SQL logging (optional, to debug SQL script execution)
-logging.level.org.springframework.jdbc.core            = DEBUG
-logging.level.org.springframework.jdbc.datasource      = DEBUG
+# DevTools Configuration
+spring.devtools.restart.enabled                           = true
 
-# Spring session configuration
-spring.session.store-type                              = jdbc
-spring.session.jdbc.initialize-schema                  = always
+# Spring Session Configuration
+spring.session.store-type                                 = jdbc
+spring.session.jdbc.initialize-schema                     = never
+spring.session.timeout                                    = 1800s
+spring.session.cleanup-cron                               = 0 * * * * *
 
-# Session Timeout (in seconds)
-server.servlet.session.timeout                         = 1800s
+# Session Management
+spring.security.session-management.invalid-session-url    = /login?invalidSession=true
+spring.security.session-management.expired-url            = /login?expired=true
 
-# Session invalidation settings
-spring.security.session-management.invalid-session-url = /login?invalidSession=true
-spring.security.session-management.expired-url         = /login?expired=true
+# Optional SQL Files
+#spring.datasource.schema                                 = classpath:/sql/schema.sql
+spring.datasource.data                                    = classpath:/sql/data.sql
+
+# Logging Configuration
+logging.level.root                                        = INFO
+logging.level.org.springframework.security                = DEBUG
+logging.level.org.springframework                         = INFO
+logging.level.org.springframework.security.authentication = DEBUG
+logging.level.org.springframework.jdbc.core               = INFO
+logging.level.org.springframework.jdbc.datasource         = INFO
+logging.level.org.hibernate.SQL                           = INFO
+logging.level.org.hibernate.type.descriptor.sql           = INFO
+logging.level.org.springframework.session                 = DEBUG
