--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port                                               = 8080
 server.servlet.session.timeout                            = 5s
 
 # DataSource Configuration
-spring.datasource.url                                     = jdbc:mysql://localhost:3306/TaxFM?createDatabaseIfNotExist=true
+spring.datasource.url                                     = jdbc:mysql://localhost:3306/TaxFM?serverTimezone=Asia/Kolkata&createDatabaseIfNotExist=true
 spring.datasource.username                                = root
 spring.datasource.password                                = root
 spring.datasource.driver-class-name                       = com.mysql.cj.jdbc.Driver
@@ -22,7 +22,7 @@ spring.devtools.restart.enabled                           = true
 # Spring Session Configuration
 spring.session.store-type                                 = jdbc
 spring.session.jdbc.initialize-schema                     = never
-spring.session.timeout                                    = 1800s
+spring.session.timeout                                    = 5s
 spring.session.cleanup-cron                               = 0 * * * * *
 
 # Session Management
