Changed Authority to implement Role based Authority

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.password                                = root
 spring.datasource.driver-class-name                       = com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.leakDetectionThreshold           = 60000
 spring.datasource.initialization-mode                     = always
+spring.jpa.open-in-view                                   = false
 
 # Hibernate Configuration
 spring.jpa.hibernate.ddl-auto                             = update
@@ -21,7 +22,7 @@ spring.devtools.restart.enabled                           = true
 
 # Spring Session Configuration
 spring.session.store-type                                 = jdbc
-spring.session.jdbc.initialize-schema                     = never
+spring.session.jdbc.initialize-schema                     = always
 spring.session.timeout                                    = 1800s
 spring.session.cleanup-cron                               = 0 * * * * *
 
@@ -35,11 +36,17 @@ spring.datasource.data                                    = classpath:/sql/data.
 
 # Logging Configuration
 logging.level.root                                        = INFO
-logging.level.org.springframework.security                = DEBUG
+logging.level.org.springframework.security                = INFO
 logging.level.org.springframework                         = INFO
-logging.level.org.springframework.security.authentication = DEBUG
+logging.level.org.springframework.security.authentication = INFO
 logging.level.org.springframework.jdbc.core               = INFO
 logging.level.org.springframework.jdbc.datasource         = INFO
 logging.level.org.hibernate.SQL                           = INFO
 logging.level.org.hibernate.type.descriptor.sql           = INFO
-logging.level.org.springframework.session                 = DEBUG
+logging.level.org.springframework.session                 = INFO
+
+# AWS Configuration
+aws.accessKeyId                                           = AKIAZ24ISUBO7LUUE34H
+aws.secretKey                                             = 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
+aws.region                                                = ap-south-1
+aws.s3.bucket                                             = taxfm
